# arinc653-scheduler-sim

./: .gitignore  CMakeLists.txt  README.md  config.txt.example
docs/: presentation_script.md  system_working_principle_report.md  uml.md
include/: Config.h  DisplaySystem.h  FlightControl.h  HealthMonitor.h  IPartition.h  Logger.h  Scheduler.h
src/: DisplaySystem.cpp  FlightControl.cpp  HealthMonitor.cpp  Logger.cpp  Scheduler.cpp  main.cpp
